# concord

./: .gitignore  README.md  review.config.json
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json
.github/workflows/: code-index.yml
docs/superpowers/plans/: 2026-07-15-gate-holistic-panel.md  2026-07-16-codex-review-until-green-adapter.md  2026-07-16-vendor-agnostic-harness-adapter.md  2026-07-17-unified-plugin-versioning.md
docs/superpowers/specs/: 2026-07-12-review-gate-design.md  2026-07-15-gate-holistic-panel-design.md  2026-07-16-codex-e2e-note.md  (+5 more)
harness-engineering/plans/: 2026-07-05-session-state-checkpoint-plan.md  2026-07-06-task-charter-continuity-plan.md
harness-engineering/specs/: 2026-07-05-d2-session-state-checkpoint.md  2026-07-05-session-state-checkpoint.md  2026-07-06-task-charter-continuity-design.md
plugins/concord-codex/: hooks.json
scripts/: release-version.mjs
services/agent-team/: Dockerfile  README.md  entrypoint.sh  package-lock.json  package.json
services/code-index/: pyproject.toml
services/code-index/src/code_index/: __init__.py  _clangd.py  cli.py  engine.py  extract.py  materialize.py  store.py
services/code-index/tests/: conftest.py  test_cli.py  test_engine.py  test_extract.py  test_materialize.py  test_smoke.py  test_store.py
services/code-index/tests/fixtures/: mini_ntt.py
services/code-index/tests/fixtures/mini-ntt/app/: consumer.cpp
services/code-index/tests/fixtures/mini-ntt/app/impl/: local_ntt.hpp
services/code-index/tests/fixtures/mini-ntt/dep/include/mini/: ntt.hpp
(+217 files in other folders)
